# APEX-OS

./: .gitattributes  .gitignore  BOOTSTRAP_PACKET.txt  CLAUDE.md  EDGE Data 4-23-26 - POS,PLAYER,SCHOOL,GRADE,ROUND,OVR_R.csv  IMPL_SPEC_rpg_pvc_display.md  PASSRUSHMOVES4-23-26 - PASSRUSHMOVES4-23-26.csv  PATCH_NOTES.md  PERPLEXITY_RESEARCH_INTEGRATION.md  PLAN.md  PROJECT_STATE.md  README.md  RUNLOG.md  SCHEMA_SNAPSHOT.sql  SESSION_CLOSE_CHECKLIST.md  SESSION_STATE.md  SESSION_STATE_MODE.md  SESSION_STATE_MODE1.md  SESSION_STATE_MODE3.md  STATE_SNAPSHOT.md  TREE.txt  apex_os_site_update_pack.md  consensusdatabase_4-23-26.csv  draftosqueriestargets.py  draftosqueriesteamfit.py  ingest.py  netlify.toml  prospect_ghosts.txt  prospect_ghosts_doctor.sql  pyproject.toml  requirements.txt  run_cb_audit_pack.py
app/: app.py  app_landing.py
data/: apex_calibration_batch.json  apex_calibration_batch_patched.json  apex_jfoster_reconciliation_2026_session90.csv  apex_top300_board_session90_20260421T060628Z.csv  apex_top50_batch.json  apex_top50_batch_patched.json  apex_top50_rescored_session14.json  apex_top50_rescored_session15.json  apex_top50_rescored_session17.json  apex_top50_rescored_session26.json  apex_top50_rescored_session29.json  apex_top50_rescored_session37.json  consensusdatabase_4-23-26.csv  top300_incremental_pids_session90.txt  top300_remaining_pids_session90.txt
docs/: DIVERGENCE_TRIAGE.md
draftos/: config.py  team_fitevaluator.py
draftos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
exports/: board_2026_v1_default.csv  (+7 more)
memory/: MEMORY.md
(+290 files in other folders)
